# evolve

./: .gitignore  README.md  evolve.cabal  project.nix  result  shell.nix  withHaddockWithCabalGenerateDocs.sh
src/: FirstVersion.hs  Main.hs  World.hs
