Name: evolve
Version: 0.0.1
Synopsis: Small library for composing incomplete (evolving) models
Homepage: http://memorici.de
License: MIT
Author: Jonn Mostovoy
Copyright: 2015 ILDesign
Build-type: Simple
Cabal-version: >=1.10
Library
  Build-depends: base
  Exposed-modules: FirstVersion
  Hs-source-dirs: src
  Default-language: Haskell2010
Executable evolve-demo
  Ghc-options: -Wall
  Main-is: Main.hs
  Build-depends: base,
                 time >= 1.5.0
  Hs-source-dirs: src
  Default-language: Haskell2010
